--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <title>Concepto Sanitario</title>
+    <script src="https://www.google.com/recaptcha/api.js"></script>
+
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
